--- a/projects/foo-lib/package.json
+++ b/projects/foo-lib/package.json
@@ -1,6 +1,15 @@
 {
   "name": "foo-lib",
   "version": "0.0.1",
+  "keywords": [
+    "Angular",
+    "Library"
+  ],
+  "license": "SEE LICENSE IN LICENSE",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Manivannandurairaj/foo-lib"
+  },
   "peerDependencies": {
     "@angular/common": "^7.1.0 || ^6.0.0",
     "@angular/core": "^7.1.0 || ^6.0.0"
